k8s/namespace-and-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workload
