k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-sample
  namespace: workload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-sample
  template:
    metadata:
      labels:
        app: aks-sample
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: app-sa
      containers:
        - name: web
          image: REPLACE_WITH_ACR_LOGIN_SERVER/aks-sample:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aks-sample
  namespace: workload
spec:
  selector:
    app: aks-sample
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
