k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-sample
  namespace: workload
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /aks
            pathType: Prefix
            backend:
              service:
                name: aks-sample
                port:
                  number: 80
